<resources>
    <string name="app_name">VIGPark-M</string>
    <string name="crime_title_hint">Номер</string>
    <string name="crime_title_label">Номер</string>
    <string name="crime_details_label">Детали</string>
    <string name="crime_solved_label">Сотрудник</string>
    <string name="new_crime">Фото из медиатеки</string>
    <string name="crime_suspect_text">Выбери получателя</string>
    <string name="crime_report_text">Отправить репорт</string>
    <string name="crime_report">%1$s!Нарушение в  %2$s. %3$s, и %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="photo_path">Photo_path</string>
    <string name="photo_path_full">Photo_path_full</string>
    <string name="resend">Отправить неотправленные фото</string>
    <string name="resend_btn">Отправить заново</string>
    <string name="plate_not_found">Не распознан номер</string>
    <string name="send_error">Ошибка отправки на сервер</string>
    <string name="type_of_photo">Изменить тип фотографирования</string>
    <string name="flash">Фонарик</string>
    <string name="ip_сщташпгкфешщт">Изменить ip сервера</string>
    <string name="zone">Зона</string>
    <string name="photo">Фото</string>
    <string name="info">Посмотреть информацию</string>
</resources>
