<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
    android:isScrollContainer="true">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView

                android:id="@+id/crime_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_height="200dp"
                tools:src="@color/material_dynamic_tertiary80"
                tools:layout_width="match_parent"
                android:contentDescription="@string/photo" />

            <ImageView

                android:id="@+id/crime_photo_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/photo"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crime_photo"
                tools:layout_height="50dp"
                tools:layout_width="match_parent"
                tools:src="@color/material_dynamic_tertiary80" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/crimefragment_icon_found"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_not_found"
                android:visibility="gone"
                tools:visibility="visible"/>
            <TextView
                android:id="@+id/crimefragment_text_found"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/plate_not_found"
                android:textSize="11dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                tools:visibility="visible"/>
            <ImageView
                android:id="@+id/crimefragment_icon_send"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"
                android:visibility="gone"
                tools:visibility="visible"/>
            <TextView
                android:id="@+id/crimefragment_text_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_error"
                android:textSize="11sp"
                android:layout_margin="10dp"
                android:visibility="gone"
                tools:visibility="visible"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"/>

    <ru.vigtech.android.vigpark.ui.EditTextWithDel
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textSize="25sp"/>
    <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_details_label"/>

    <TextView
        android:id="@+id/crime_det"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Добрый Николай Александрович"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000"/>


    <Button

        android:id="@+id/resend_fragment_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/resend_btn"
        />







    <TextView
        android:id="@+id/longlat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10px"
        android:autoLink="web"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:text="местоположение"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:textSize="20sp" />



</LinearLayout>
</ScrollView>
</LinearLayout>